css/styles.css
/* ... */
header a:hover {
    color: #ddf3f5;
}

header li {
    margin-bottom: 20px;
}

header img {
    width: auto;
    height: 80px;
    margin: 0 0 10px 0;
    padding: 0;
}

header menu {
    margin: 0;
    padding: 0;
}

header i {
    color: #2f979f;
    font-size: 40px;
    margin-top: 15px;
    margin-left: 10px;
    transition: .2s;
}

header i:hover {
    cursor: pointer;
    color: #28868d;
}


/*** HOME SECTION 1 ***/
#section-1-home {
    display: flex;
    justify-content: center;
    align-items: center;
    flex-direction: column;
    position: relative;
    z-index: -1;
}

#sprinkles-video {
    width: 100%;
    height: auto;
    margin-top: -200px;
    position: fixed;
    z-index: -10;
    opacity: 0.6;
}

#masthead-logo {
    width: 1100px;
    height: auto;
    margin: 50px 0 -40px 0;
}

#masthead-logo-mobile {
    display: none;
    width: 500px;
    height: auto;
    margin-top: 50px;
    margin-bottom: 10px;
}

.masthead-logo {
    position: relative;
    z-index: -10;
    filter: drop-shadow(8px 5px 0px rgba(61, 193, 210, 0.37));
}

.masthead-donut {
    width: auto;
    height: 200px;
    margin: -65px -30px 0 -30px;
}

.masthead-donut-row {
    display: flex;
    flex-direction: row;
    justify-content: center;
}

/* donut z-index */
#dm3, #dm5, #db1, #db3, #db5, #db8 {
    z-index: 1;
}

#db4,#db7 {
    z-index: 2;
}

#dm2, #dm5 {
    z-index: -1;
}

#dt1 {
    z-index: -2;
}
/* end donut z-index */

/* donut margins */
#db2 {
    margin-top: -125px;
}

#db4, #db6 {
    margin-top: -80px;
}

#db8 {
    margin-top: -128px;
}

#db9 {
    margin-top: -90px;
}

#dm1 {
    margin-right: -60px;
}

#dm2 {
    margin-top: -120px;
}

#dm3 {
    margin-right: -50px;
}

#dm4 {
    margin-top: -100px;
}

#dt1 {
    margin-bottom: -5px;
}

#dbl, #dbr {
    margin: 0 -20px -70px -20px;
}
/* end donut margins */

/*** HOME SECTION 2 ***/
#section-2-home {
    z-index: 3;
    margin-top: -100px;
    position: relative;
    height: 675px;
}

#donuts-video {
    width: 100%;
    height: auto;
}

#mobile-donut-sprinkles-bg {
    display: none;
}

#section2-content {
    margin-top: -930px;
    padding-right: 80px;
    text-align: right;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    justify-content: center;
    height: 100%;
    position: relative;
}

#title {
    margin-bottom: 10px;
    width: 600px;
}

#home h1,
#home h2 {
    font-size: 75px;
    line-height: 70px;
}

#s2-p {
    width: 500px;
}

#home p {
    line-height: 42px;
    font-size: 28px;
}

.blue-pink-btn {
    background-image: linear-gradient(to right, #a9e2e6, #f6c4e9);
    border: 1px rgba(245, 223, 240, 0.99) solid;
    border-radius: 10px;
    z-index: 10;
    transition: 0.5s ease all;
    padding: 7px 45px;
    font-size: 28px;
}

#section-2-home button {
    margin-top: 100px;
}

.blue-pink-btn:hover {
    background-image: linear-gradient(to right, #f6c4e9, #f6c4e9);
    border: 1px rgba(241, 150, 217, 0.99) solid;
    cursor: pointer;
}

#section2-content h1,
#section2-content p {
    z-index: 10;
    pointer-events: none;
}

/* sprinkles */
.home-sprinkle {
    width: 120px;
    height: auto;
    transition: all ease 0.5s;
    transform: rotate(0deg);
    position: absolute;
    z-index: 9;
}

/* white */
#sprinkle-1 {
    bottom: 0px;
    right: 40px;
}

#sprinkle-2 {
    bottom: -30px;
    right: 300px;
    transform: rotate(20deg);
}

#sprinkle-3 {
    bottom: 30px;
    right: 400px;
    transform: rotate(50deg);
}

#sprinkle-4 {
    bottom: 200px;
    right: 800px;
    transform: rotate(2deg);
}

#sprinkle-5 {
    bottom: -350px;
    right: 220px;
    transform: rotate(160deg);
}

#sprinkle-6 {
    bottom: 500px;
    right: 770px;
    transform: rotate(250deg);
}

#sprinkle-7 {
    bottom: 420px;
    right: 370px;
    transform: rotate(320deg);
}

#sprinkle-8 {
    bottom: 370px;
    right: 290px;
    transform: rotate(186deg);
}

/* orange */
#sprinkle-9 {
    bottom: 240px;
    right: 0px;
    transform: rotate(220deg);
}

#sprinkle-10 {
    bottom: 310px;
    right: 630px;
    transform: rotate(59deg);
}

#sprinkle-11 {
    bottom: 460px;
    right: 230px;
    transform: rotate(136deg);
}

/* red */
#sprinkle-12 {
    bottom: 100px;
    right: 390px;
    transform: rotate(111deg);
}

#sprinkle-13 {
    bottom: -280px;
    right: 420px;
    transform: rotate(83deg);
}

#sprinkle-14 {
    bottom: -170px;
    right: 610px;
    transform: rotate(145deg);
}

#sprinkle-15 {
    bottom: -100px;
    right: 560px;
    transform: rotate(299deg);
}

/* blue */
#sprinkle-16 {
    bottom: 530px;
    right: 700px;
    transform: rotate(59deg);
}

#sprinkle-17 {
    bottom: 55px;
    right: 420px;
    transform: rotate(129deg);
}

#sprinkle-18 {
    bottom: 322px;
    right: 520px;
    transform: rotate(342deg);
}

#sprinkle-19 {
    bottom: 530px;
    right: 100px;
    transform: rotate(28deg);
}

/* yellow */
#sprinkle-20 {
    bottom: 560px;
    right: 800px;
    transform: rotate(348deg);
}

#sprinkle-21 {
    bottom: 250px;
    right: 760px;
    transform: rotate(264deg);
}

#sprinkle-22 {
    bottom: 10px;
    right: 300px;
    transform: rotate(90deg);
}

#sprinkle-23 {
    bottom: -230px;
    right: 460px;
    transform: rotate(0deg);
}

#sprinkle-24 {
    bottom: -50px;
    right: 660px;
    transform: rotate(34deg);
}

#sprinkle-25 {
    bottom: 550px;
    right: 460px;
    transform: rotate(184deg);
}

#sprinkle-26 {
    bottom: 230px;
    right: 560px;
    transform: rotate(233deg);
}

/* green */
#sprinkle-27 {
    bottom: 490px;
    right: 660px;
    transform: rotate(233deg);
}

#sprinkle-28 {
    bottom: 330px;
    right: 430px;
    transform: rotate(233deg);
}

#sprinkle-29 {
    bottom: 60px;
    right: 760px;
    transform: rotate(233deg);
}

#sprinkle-30 {
    bottom: 530px;
    right: 150px;
    transform: rotate(133deg);
}
/* ... */

